# rag-explorer

./: .embedding_cache  .env  .env.example  .gitignore  CLI_USAGE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TEST_REBUILD_PLAN.md  architecture_validation_final_summary.txt  conftest.py  phase1_validation_report.txt  phase2_validation_report.txt  phase3_validation_report.txt  phase4_integration_test.py  phase4_validation_report.txt  phase5_comprehensive_test.py  phase5_performance_benchmark.py  phase5_validation_report.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_confidence.py  test_error_messages.py  test_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md  SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_issue.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml  release.yml  security.yml
chroma_db/: chroma.sqlite3
data/: crawl_cache.json
data/eval/: gold.jsonl  results_1757139560.csv  results_1757198392.csv
docs/: api_reference.md  architecture-split-plan.md  architecture.md  configuration.md  configuration_management.md  database_operations.md  deployment_infrastructure.md  error_handling_troubleshooting.md  faq.md  feasibility-critique.md  features.md  getting_started.md  installation.md  integration_guides.md  performance_tuning.md  personal-rag-explorer-plan.md  personal-rag-simplification-plan.md  production-deployment-plan.md  providers.md  roadmap.md  security_authentication.md  simplification-summary.md  troubleshooting.md  usage.md
src/: app.py  batch.py  embeddings.py  ingest.py  llm_local.py  rag.py  retrieve.py  run_eval.py  settings.py  store.py  web_ingest.py
src/api/: app.py
src/cli/: __init__.py  ask_session.py  main.py  output.py
src/core/: llm_local.py  rag.py  retrieve.py
src/data/: __init__.py  chunker.py  embeddings.py  ingest.py  store.py  web_ingest.py
src/rag_explorer/: _version.py  constants.py
src/rag_explorer/api/: __init__.py  app.py
src/rag_explorer/cli/: __init__.py  ask_session.py  main.py  output.py  simple_main.py
src/rag_explorer/cli/commands/: __init__.py  admin_commands.py  ask.py  configure.py  configure_commands.py  crawl.py  index.py  index_commands.py  search.py  search_commands.py
src/rag_explorer/config/: __init__.py  manager.py  schema.py
src/rag_explorer/core/: rag_engine.py  registry.py  resilience.py
src/rag_explorer/core/providers/: __init__.py  base.py
src/rag_explorer/core/providers/implementations/: __init__.py  anthropic_provider.py  google_gemini.py  (+2 more)
src/rag_explorer/data/: embeddings.py  store.py  web_ingest.py
src/rag_explorer/engine/: __init__.py  database.py  document_processor.py  embedding_service.py  query_service.py  rag_engine.py  simple_rag_engine.py
src/rag_explorer/utils/: batch.py  run_eval.py  settings.py  simple_settings.py  stderr_suppressor.py
src/support_deflect_bot/: __init__.py  _version.py
src/support_deflect_bot/api/: __init__.py  app.py
src/support_deflect_bot/api/dependencies/: __init__.py  engine.py  security.py  validation.py
src/support_deflect_bot/api/endpoints/: __init__.py  admin.py  batch.py  health.py  indexing.py  query.py
src/support_deflect_bot/api/middleware/: __init__.py  authentication.py  cors.py  error_handling.py  logging.py  rate_limiting.py
src/support_deflect_bot/api/models/: __init__.py  requests.py  responses.py
src/support_deflect_bot/cli/: __init__.py  ask_session.py  configure.py  main.py  output.py  simple_main.py
src/support_deflect_bot/cli/commands/: admin_commands.py  ask_commands.py  configure_commands.py  crawl_commands.py  index_commands.py  search_commands.py
src/support_deflect_bot/compat/: __init__.py  _path_helper.py  data_bridge.py  llm_bridge.py  rag_bridge.py  retrieve_bridge.py  utils_bridge.py
src/support_deflect_bot/config/: __init__.py  manager.py  schema.py
src/support_deflect_bot/core/: __init__.py
src/support_deflect_bot/core/providers/: __init__.py  base.py  config.py  strategies.py
src/support_deflect_bot/data/: __init__.py  chunker.py  embeddings.py  ingest.py  store.py  web_ingest.py
src/support_deflect_bot/engine/: __init__.py  document_processor.py  embedding_service.py  query_service.py  rag_engine.py  simple_rag_engine.py
src/support_deflect_bot/utils/: __init__.py  metrics.py  region_detector.py  run_eval.py  settings.py  stderr_suppressor.py  warnings_suppressor.py
src/support_deflect_bot_old/: _version.py
src/support_deflect_bot_old/cli/: main.py
src/support_deflect_bot_old/core/providers/: base.py
src/support_deflect_bot_old/utils/: region_detector.py
src/utils/: batch.py  metrics.py  run_eval.py  settings.py  stderr_suppressor.py  warnings_suppressor.py
support_deflect_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
support_deflect_bot_old/core/: __init__.py
support_deflect_bot_old/core/providers/implementations/: mistral_provider.py
support_deflect_bot_old/utils/: run_eval.py
tests/: README.md  base.py  conftest.py  test_runner.py
tests/integration/: test_api.py  test_end_to_end_workflows.py  test_middleware.py  test_multi_provider.py
tests/providers/: conftest.py  test_provider_ecosystem.py
tests/system/: test_e2e.py
tests/unit/: test_chunker.py  test_config_manager.py  test_config_schema.py  test_embeddings.py  test_gemini_provider.py  test_rag.py  test_store.py
tests/unit/api/: test_app.py  test_endpoints.py  test_middleware.py  test_models.py
tests/unit/cli/: test_ask_session.py  test_main.py  test_output.py
tests/unit/cli/commands/: test_ask_commands.py
tests/unit/engine/: test_document_processor.py  test_embedding_service.py  test_engine_integration.py  test_query_service.py  test_rag_engine.py
tests/unit/interface/: test_cli_api_consistency.py
tests/unit/providers/: test_base_provider.py  test_provider_config.py  test_provider_strategies.py
tests/unit/providers/implementations/: test_anthropic_provider.py  test_google_gemini.py  test_groq_provider.py  test_mistral_provider.py  test_ollama_provider.py  test_openai_provider.py
(+8 files in other folders)
