[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-deflect-bot"
dynamic = ["version"]
authors = [{name = "Aditya Mittal", email = "theadityamittal@gmail.com"}]
description = "Intelligent document Q&A with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "httpx>=0.27.0",
    "requests>=2.32.3",
    "chromadb==0.5.5",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
]
local = ["ollama>=0.3.0"]
all = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
    "ollama>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pip-audit>=2.0.0",
]
prod = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
]

[project.scripts]
deflect-bot = "support_deflect_bot.cli.main:cli"

[project.urls]
Homepage = "https://github.com/theadityamittal/support-deflect-bot"
Repository = "https://github.com/theadityamittal/support-deflect-bot"
Issues = "https://github.com/theadityamittal/support-deflect-bot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
support_deflect_bot = ["*.md", "*.txt", "*.json"]

[tool.setuptools_scm]
write_to = "src/support_deflect_bot/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "support_deflect_bot"]
skip_glob = ["chroma_db/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
exclude = [
    "chroma_db",
    "build",
    "dist"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "requires_real_api: Tests requiring real API calls",
    "requires_ollama: Tests requiring Ollama service",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/chroma_db/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract"
]