[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-deflect-bot"
dynamic = ["version"]
authors = [{name = "Aditya Mittal", email = "theadityamittal@gmail.com"}]
description = "Intelligent document Q&A with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.11.9",
    "python-dotenv==1.0.1",
    "httpx>=0.27.0",
    "requests>=2.32.3",
    "chromadb==0.5.5",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
# Core API providers for enhanced functionality
api = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
]

# Local/self-hosted providers
local = [
    "ollama>=0.3.0"
]

# Extended providers for comprehensive coverage
providers-extended = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
    "ollama>=0.3.0",
]

# Architecture-specific dependencies
engine = [
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.0.0",
]

# Production-ready deployment dependencies
production = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
    "gunicorn>=21.2.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]

# Development and testing dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pip-audit>=2.0.0",
    "build>=0.10.0",
]

# Complete installation (all optional dependencies)
all = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "mistralai>=0.1.0",
    "anthropic>=0.25.0",
    "ollama>=0.3.0",
    "asyncio-throttle>=1.0.0",
    "tenacity>=8.0.0",
    "gunicorn>=21.2.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]

[project.scripts]
deflect-bot = "support_deflect_bot.cli.main:cli"

[project.urls]
Homepage = "https://github.com/theadityamittal/support-deflect-bot"
Repository = "https://github.com/theadityamittal/support-deflect-bot"
Issues = "https://github.com/theadityamittal/support-deflect-bot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
support_deflect_bot = ["*.md", "*.txt", "*.json"]

[tool.setuptools_scm]
write_to = "src/support_deflect_bot/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  src/support_deflect_bot/_version\.py
)/
'''
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src", "support_deflect_bot"]
skip_glob = ["chroma_db/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
exclude = [
    "chroma_db",
    "build",
    "dist"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "requires_real_api: Tests requiring real API calls",
    "requires_ollama: Tests requiring Ollama service",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/chroma_db/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract"
]